// NOTE: Run the following command when you modify this file.
// /usr/local/bin/protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.com.hnakamur.rdirsync.pb";
option java_outer_classname = "RDirSyncProto";

package pb;

service RDirSync {
  rpc Stat(StatRequest) returns (FileInfo) {}
  rpc ReadDir(ReadDirRequest) returns (stream FileInfos) {}

  rpc FetchFile(FetchFileRequest) returns (stream FileChunk) {}
  rpc SendFile(stream SendFileRequest) returns (Empty) {}

  rpc Chown(ChownRequest) returns (Empty) {}
  rpc Chmod(ChmodRequest) returns (Empty) {}
  rpc Chtimes(ChtimesRequest) returns (Empty) {}

  rpc EnsureDirExists(EnsureDirExistsRequest) returns (Empty) {}
  rpc EnsureNotExist(EnsureNotExistRequest) returns (Empty) {}
}

message StatRequest {
  string path = 1;
  bool wantsOwnerAndGroup = 2;
}

message ReadDirRequest {
  string path = 1;
  int32 atMostCount = 2;
  bool wantsOwnerAndGroup = 3;
}

message FileInfos {
  repeated FileInfo infos = 1;
}

message FileInfo {
  string name = 1;
  int64 size = 2;
  int32 mode = 3;
  UnixTime modTime = 4;
  string owner = 5;
  string group = 6;
}

message UnixTime {
  int64 second = 1;
  int64 nanoSecond = 2;
}

message FetchFileRequest {
  string path = 1;
  int32 bufSize = 2;
}

message FileChunk {
  bytes chunk = 1;
}

message SendFileRequest {
  string path = 1;
  bytes chunk = 3;
}

message Empty {}

message ChownRequest {
  string path = 1;
  string owner = 2;
  string group = 3;
}

message ChmodRequest {
  string path = 1;
  int32 mode = 2;
}

message ChtimesRequest {
  string path = 1;
  UnixTime atime = 2;
  UnixTime mtime = 3;
}

message EnsureNotExistRequest {
  string path = 1;
}

message EnsureDirExistsRequest {
  string path = 1;
}
